Update sobek-service/src/main/java/org/rutebanken/sobek/exporter/StreamingPublicationDelivery.java
Co-authored-by: Copilot <175728472+Copilot@users.noreply.github.com>